# aoc21

./: CMakeLists.txt  README.md
solutions/: 01A.cpp  01B.cpp  02A.cpp  02B.cpp  03A.cpp  03B.cpp
